--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ DB_NAME=snappfoodDB
 DB_USERNAME=root
 DB_PASSWORD=********
 DB_HOST=localhost
+
+#S3
+S3_SECRET_KEY=*************
+S3_ACCESS_KEY=************
+S3_BUCKET_NAME=snappfood-opensource
+S3_ENDPOINT=storage.iran.liara.space
