--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ S3_SECRET_KEY=*************
 S3_ACCESS_KEY=************
 S3_BUCKET_NAME=snappfood-opensource
 S3_ENDPOINT=storage.iran.liara.space
+
+#JWT
+ACCESS_TOKEN_SECRET=***********************************
+REFRESH_TOKEN_SECRET==***********************************
